--- a/tslox/package.json
+++ b/tslox/package.json
@@ -10,6 +10,10 @@
   "author": "Josh Holbrook",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "read": "^3.0.0"
   }
 }
