--- a/tslox/package.json
+++ b/tslox/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc ./*.ts && node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run ast:generate && tsc ./*.ts && node ./index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ast:generate": "tsc ./scripts/generate-ast.ts && node ./scripts/generate-ast.js ."
   },
   "author": "Josh Holbrook",
   "license": "ISC",
