Banged out the structure of the parser - up to 6.3 but need to close read 6.2

--- a/tslox/package.json
+++ b/tslox/package.json
@@ -8,7 +8,8 @@
     "start": "npm run build && node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ast:generate": "tsc ./scripts/generate-ast.ts && node ./scripts/generate-ast.js .",
-    "console": "npm run build && node"
+    "console": "npm run build && node",
+    "clean": "rm *.js ./scripts/*.js"
   },
   "author": "Josh Holbrook",
   "license": "ISC",
