--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -4,6 +4,8 @@ project(clox VERSION 1.0)
 
 set(C_STANDARD 23)
 
-add_executable(clox main.c)
+add_executable(clox src/main.c)
 
-target_include_directories(clox PUBLIC "${PROJECT_BINARY_DIR}")
+set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
+
+target_include_directories(clox PUBLIC "${PROJECT_BINARY_DIR}/src")
