clean up cmakelists

--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -4,12 +4,12 @@ project(clox VERSION 1.0)
 
 set(C_STANDARD 23)
 
+include_directories(src)
+
 add_library(memory src/memory.c)
 add_library(chunk src/chunk.c)
 target_link_libraries(chunk PRIVATE memory)
 
 add_executable(clox src/main.c)
 target_link_libraries(clox PRIVATE chunk)
-
 set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
-target_include_directories(clox PRIVATE "${PROJECT_BINARY_DIR}/src")
