--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -7,9 +7,13 @@ set(C_STANDARD 23)
 include_directories(src)
 
 add_library(memory src/memory.c)
+
 add_library(chunk src/chunk.c)
 target_link_libraries(chunk PRIVATE memory)
 
+add_library(debug_ src/debug.c)
+
 add_executable(clox src/main.c)
-target_link_libraries(clox PRIVATE chunk)
 set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
+target_link_libraries(clox PRIVATE chunk)
+target_link_libraries(clox PRIVATE debug_)
