just me or did I return a constant? lmao

--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -8,12 +8,22 @@ include_directories(src)
 
 add_library(memory src/memory.c)
 
+add_library(value src/value.c)
+target_link_libraries(value PRIVATE memory)
+
 add_library(chunk src/chunk.c)
 target_link_libraries(chunk PRIVATE memory)
+target_link_libraries(chunk PRIVATE value)
 
 add_library(debug_ src/debug.c)
+target_link_libraries(debug_ PRIVATE memory)
+target_link_libraries(debug_ PRIVATE value)
+
+add_library(vm src/vm.c)
+target_link_libraries(vm PRIVATE chunk)
 
 add_executable(clox src/main.c)
 set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
 target_link_libraries(clox PRIVATE chunk)
 target_link_libraries(clox PRIVATE debug_)
+target_link_libraries(clox PRIVATE vm)
