--- a/citree/package.json
+++ b/citree/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "minimist": "^1.2.8",
     "nunjucks": "^3.2.4",
-    "typescript-parsec": "^0.3.4",
-    "zod": "^3.22.4"
+    "typescript-parsec": "^0.3.4"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
