--- a/citree/package.json
+++ b/citree/package.json
@@ -4,9 +4,11 @@
   "description": "A DSL for generating ASTs in TypeScript",
   "main": "src/index.js",
   "scripts": {
+    "format": "prettier . --write",
     "build": "tsc",
     "start": "npm run build && node ./src/main.js",
     "test": "npm run build && tap ./test/*.js",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts'",
     "console": "npm run build && node",
     "clean": "rm -f ./src/*.js ./test/*.js"
   },
@@ -25,7 +27,9 @@
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
+    "prettier": "^3.1.0",
     "tap": "^18.6.1",
+    "tslint": "^6.1.3",
     "typescript": "^5.3.2"
   }
 }
