--- a/citree/package.json
+++ b/citree/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "npm run build && node ./src/main.js",
     "test": "npm run build && tap ./test/*.js",
-    "lint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "eslint .",
     "console": "npm run build && node",
     "clean": "rm -f ./src/*.js ./test/*.js"
   },
@@ -27,9 +27,11 @@
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
     "prettier": "^3.1.0",
     "tap": "^18.6.1",
-    "tslint": "^6.1.3",
     "typescript": "^5.3.2"
   }
 }
