--- a/citree/package.json
+++ b/citree/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
+    "@types/nunjucks": "^3.2.6",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
