--- a/citree/package.json
+++ b/citree/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "minimist": "^1.2.8",
     "nunjucks": "^3.2.4",
-    "typescript-parsec": "^0.3.4"
+    "typescript-parsec": "^0.3.4",
+    "which": "^4.0.0"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
     "@types/nunjucks": "^3.2.6",
+    "@types/which": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
