stack, unary minus

--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -20,10 +20,12 @@ target_link_libraries(debug_ PRIVATE memory)
 target_link_libraries(debug_ PRIVATE value)
 
 add_library(vm src/vm.c)
+target_link_libraries(vm PRIVATE debug_)
 target_link_libraries(vm PRIVATE chunk)
+target_link_libraries(vm PRIVATE value)
 
 add_executable(clox src/main.c)
 set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
 target_link_libraries(clox PRIVATE chunk)
-target_link_libraries(clox PRIVATE debug_)
+# target_link_libraries(clox PRIVATE debug_)
 target_link_libraries(clox PRIVATE vm)
