hash table, interned strings

--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -12,7 +12,12 @@ add_library(value src/value.c)
 target_link_libraries(value PRIVATE memory)
 target_link_libraries(value PRIVATE object)
 
+add_library(table src/table.c)
+target_link_libraries(value PRIVATE memory)
+target_link_libraries(value PRIVATE object)
+
 add_library(object src/object.c)
+target_link_libraries(object PRIVATE table)
 
 add_library(chunk src/chunk.c)
 target_link_libraries(chunk PRIVATE memory)
@@ -33,6 +38,7 @@ add_library(vm src/vm.c)
 target_link_libraries(vm PRIVATE compiler)
 target_link_libraries(vm PRIVATE debug_)
 target_link_libraries(vm PRIVATE chunk)
+target_link_libraries(vm PRIVATE table)
 
 add_executable(clox src/main.c)
 set_target_properties(clox PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
