--- a/clox/justfile
+++ b/clox/justfile
@@ -12,6 +12,9 @@ build:
 
 format:
   clang-format -i src/*
+  if [ ! -d venv ]; then python3 -m venv venv; fi
+  if [ ! -f venv/bin/cmake-format ]; then venv/bin/pip install cmakelang; fi
+  venv/bin/cmake-format -i CMakeLists.txt
 
 clean:
   rm -f CMakeCache.txt
